--- a/index.html
+++ b/index.html
@@ -4,8 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homework 1</title>
 </head>
+<!-- Header section -->
+<header>
+    <span>WEB</span>
+    <span>STUDIO</span>
+    <nav>
+        <li><a href="studio.html">Stuido</a></li>
+        <li><a href="portofolio.html">Portofolio</a> </li>
+        <li><a href="contacts.html">Contacts</a> </li>
+    </nav>
+
+    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+</header>
+<main>
+    <!-- Hero section -->
+    <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+    </section>
+    <!-- Section strenghts -->
+    <section>
+        <ul>
+            <li>
+                <h2>Strategy</h2>
+                <p>Our goal is to identify the business problem to wack away with the perfect and creative solution.</p>
+            </li>
+            <li>
+
+            </li>
+            <li>
+
+            </li>
+            <li>
+            </li>
+        </ul>
+    </section>
+</main>
 
 <body>
 
