Added pics and section 2
Created section 2, added pics to the images folder, changed the heading for section 1 from h2 to h4.

--- a/index.html
+++ b/index.html
@@ -29,17 +29,34 @@
     <section>
         <ul>
             <li>
-                <h2>Strategy</h2>
+                <h4>Strategy</h4>
                 <p>Our goal is to identify the business problem to wack away with the perfect and creative solution.</p>
             </li>
             <li>
-
+                <h4>Punctuality</h4>
+                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.
+                </p>
             </li>
             <li>
-
+                <h4>Diligence</h4>
+                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    risk.</p>
             </li>
             <li>
+                <h4>Technologies</h4>
+                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                </p>
             </li>
+        </ul>
+    </section>
+    <!-- Section what are we doing -->
+    <section>
+        <h2>What are we doing</h2>
+        <ul>
+            <li><img src="images/Rectangle 71.png" alt="a pic of a computer monitor"></li>
+            <li><img src="images/Rectangle 71 (1).png" alt="a pic of a phone with multiple interaces"></li>
+            <li><img src="images/Rectangle 71 (2).png"
+                    alt="a pic of someone holding a phone searching for inspiring places"></li>
         </ul>
     </section>
 </main>
