Adeed images and the third section
I have added 4 pics of the employees, finished section 2 and added all the details to the cards of section 3

--- a/index.html
+++ b/index.html
@@ -59,6 +59,32 @@
                     alt="a pic of someone holding a phone searching for inspiring places"></li>
         </ul>
     </section>
+    <!-- Section our team -->
+    <section>
+        <h2>Our team</h2>
+        <ul>
+            <li>
+                <img src="images/first employee.jpg" alt="An image of the product designer">
+                <h4>Mark Guerrero</h4>
+                <p>Product Designer</p>
+            </li>
+            <li>
+                <img src="images/second employee.jpg" alt="An image of the frontend developer">
+                <h4>Tom Ford</h4>
+                <p>Frontend Developer</p>
+            </li>
+            <li>
+                <img src="images/third employee.jpg" alt="An image of one of the marketing employees">
+                <h4>Camila Garcia</h4>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="images/forth employee.jpg" alt="An image of the ux designer">
+                <h4>Daniel Wilson</h4>
+                <p>UI Designer</p>
+            </li>
+        </ul>
+    </section>
 </main>
 
 <body>
