moved body, added footer
Moved the body open tag before main, added the footer ( logo and address )

--- a/index.html
+++ b/index.html
@@ -19,76 +19,84 @@
     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
     <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
 </header>
-<main>
-    <!-- Hero section -->
-    <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
-    </section>
-    <!-- Section strenghts -->
-    <section>
-        <ul>
-            <li>
-                <h4>Strategy</h4>
-                <p>Our goal is to identify the business problem to wack away with the perfect and creative solution.</p>
-            </li>
-            <li>
-                <h4>Punctuality</h4>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.
-                </p>
-            </li>
-            <li>
-                <h4>Diligence</h4>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
-                    risk.</p>
-            </li>
-            <li>
-                <h4>Technologies</h4>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-                </p>
-            </li>
-        </ul>
-    </section>
-    <!-- Section what are we doing -->
-    <section>
-        <h2>What are we doing</h2>
-        <ul>
-            <li><img src="images/Rectangle 71.png" alt="a pic of a computer monitor"></li>
-            <li><img src="images/Rectangle 71 (1).png" alt="a pic of a phone with multiple interaces"></li>
-            <li><img src="images/Rectangle 71 (2).png"
-                    alt="a pic of someone holding a phone searching for inspiring places"></li>
-        </ul>
-    </section>
-    <!-- Section our team -->
-    <section>
-        <h2>Our team</h2>
-        <ul>
-            <li>
-                <img src="images/first employee.jpg" alt="An image of the product designer">
-                <h4>Mark Guerrero</h4>
-                <p>Product Designer</p>
-            </li>
-            <li>
-                <img src="images/second employee.jpg" alt="An image of the frontend developer">
-                <h4>Tom Ford</h4>
-                <p>Frontend Developer</p>
-            </li>
-            <li>
-                <img src="images/third employee.jpg" alt="An image of one of the marketing employees">
-                <h4>Camila Garcia</h4>
-                <p>Marketing</p>
-            </li>
-            <li>
-                <img src="images/forth employee.jpg" alt="An image of the ux designer">
-                <h4>Daniel Wilson</h4>
-                <p>UI Designer</p>
-            </li>
-        </ul>
-    </section>
-</main>
 
 <body>
-
+    <main>
+        <!-- Hero section -->
+        <section>
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Order Service</button>
+        </section>
+        <!-- Section strenghts -->
+        <section>
+            <ul>
+                <li>
+                    <h4>Strategy</h4>
+                    <p>Our goal is to identify the business problem to wack away with the perfect and creative solution.
+                    </p>
+                </li>
+                <li>
+                    <h4>Punctuality</h4>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                        time.
+                    </p>
+                </li>
+                <li>
+                    <h4>Diligence</h4>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                        risk.</p>
+                </li>
+                <li>
+                    <h4>Technologies</h4>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <!-- Section what are we doing -->
+        <section>
+            <h2>What are we doing</h2>
+            <ul>
+                <li><img src="images/Rectangle 71.png" alt="a pic of a computer monitor"></li>
+                <li><img src="images/Rectangle 71 (1).png" alt="a pic of a phone with multiple interaces"></li>
+                <li><img src="images/Rectangle 71 (2).png"
+                        alt="a pic of someone holding a phone searching for inspiring places"></li>
+            </ul>
+        </section>
+        <!-- Section our team -->
+        <section>
+            <h2>Our team</h2>
+            <ul>
+                <li>
+                    <img src="images/first employee.jpg" alt="An image of the product designer">
+                    <h4>Mark Guerrero</h4>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="images/second employee.jpg" alt="An image of the frontend developer">
+                    <h4>Tom Ford</h4>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="images/third employee.jpg" alt="An image of one of the marketing employees">
+                    <h4>Camila Garcia</h4>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="images/forth employee.jpg" alt="An image of the ux designer">
+                    <h4>Daniel Wilson</h4>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
 </body>
+<footer>
+    <span>WEB</span>
+    <span>STUDIO</span>
+    <address>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+    </address>
+</footer>
 
 </html>
